# KernelForge-MultiAgent

./: .gitignore  CLAUDE.md  COMPLETION_STATUS.md  README.md  pyproject.toml  requirements.txt  verify.py
configs/: operator_families.json
docs/: AKO4X_FUSION.md  CLOSED_LOOP.md  FLASHINFER_BENCH_VALIDATION.md  HUMANIZE_INTEGRATION.md  OPERATORS_QUICK_REF.md  PROJECT_AUDIT.md  PROJECT_UPDATE_SUMMARY.md  STRUCTURED_WORKFLOW.md  SUPPORTED_OPERATORS.md  draft_template.md  reproduction.md
docs/legacy/: BATCH_OPTIMIZATION_GUIDE.md  DYNAMIC_EXPLORATION.md  QUICK_START.md  SUPPORTED_OPERATORS_RTX5070.md
kernels/: README.md
master/: MASTER.md
prompts/: README.md
prompts/rmsnorm/: phase1.md  phase2.md  phase3.md
reference/dsa_sparse_attention/: README.md  TRAPS.md  baseline.json  solutions.jsonl
reference/dsa_topk_indexer/: README.md  TRAPS.md  baseline.json  solutions.jsonl
reference/gdn_decode/: README.md  TRAPS.md  baseline.json  solutions.jsonl
reference/gdn_prefill/: README.md  TRAPS.md  baseline.json  solutions.jsonl
reference/moe_fp8/: README.md  TRAPS.md  baseline.json  solutions.jsonl
reference/paged_attention/: README.md  TRAPS.md  baseline.json  solutions.jsonl
reference/rmsnorm/: README.md  TRAPS.md  baseline.json  solutions.jsonl
scripts/: audit_archived_speedups.py  download_data.sh  download_workload_safetensors.py  evaluate-round.sh  operator_policy.py  run-round.sh  start-campaign.sh
scripts/legacy/: batch_optimize_12.py  build_and_run.sh  check_rtx5070.py  compare_versions.sh  compile_and_test.sh  (+12 more)
workspaces/: README.md
(+163 files in other folders)
